Fix Bug 311704 - kde4libs-4.9.4/sonnet/plugins/hspell adds spell check

language "Hebrew" to language list, even if hspell is not installed

Apply patch from  Thomas Dreibholz  Thanks.

FIXED-IN: 4.9.5
BUG: 311704