sonnet/plugins/hspell/kspell_hspellclient.cpp
@@ -51,8 +51,11 @@ SpellerPlugin *HSpellClient::createSpeller(const QString &language)
 QStringList HSpellClient::languages() const
 {
     QStringList langs;
-    langs.append( "he" );
-
+    HSpellDict *ad = new HSpellDict("he");
+    if (ad->isInitialized()) {
+      langs.append( "he" );
+      delete ad;
+    }
     return langs;
 }
 
